// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseStockEvents should have all the stocks and marked sold shares 1`] = `
{
  "AAPL": [
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111111",
      "BuyPrice": 75,
      "Notes": "Split 2x on 2023-04-01, before split",
      "Quantity": 1,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111115",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111111",
      "BuyPrice": 75,
      "Notes": "Split 2x on 2023-04-01, before split",
      "Quantity": 1,
      "SellDate": 2023-07-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 185,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-02-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 100,
      "Notes": "Split 2x on 2023-04-01, before split",
      "Quantity": 1,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-02-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 100,
      "Notes": "Split 2x on 2023-04-01, before split",
      "Quantity": 1,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-05-01T14:30:00.000Z,
      "BuyEventId": "111114",
      "BuyPrice": 200,
      "Notes": "bought after split",
      "Quantity": 1,
      "Ticker": "AAPL",
    },
  ],
}
`;

exports[`parseStockEventsFractional should handle fractional shares 1`] = `
{
  "AAPL": [
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111111",
      "BuyPrice": 75,
      "Notes": "Split 2x on 2023-04-01, before split (fractional)",
      "Quantity": 0.5,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111115",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111111",
      "BuyPrice": 75,
      "Notes": "Split 2x on 2023-04-01, before split (fractional)",
      "Quantity": 0.5,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111115",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-05-01T14:30:00.000Z,
      "BuyEventId": "111114",
      "BuyPrice": 200,
      "Notes": "bought after split (fractional)",
      "Quantity": 0.5,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111115",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
  ],
}
`;

exports[`parseStockEventsFractional should handle fractional shares 2 1`] = `
{
  "AAPL": [
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111111",
      "BuyPrice": 150,
      "Notes": "before split (fractional)",
      "Quantity": 0.3,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 150,
      "Notes": "before split (fractional)",
      "Quantity": 0.24,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111113",
      "BuyPrice": 150,
      "Notes": "before split (fractional)",
      "Quantity": 0.18,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111114",
      "BuyPrice": 150,
      "Notes": "before split (fractional)",
      "Quantity": 0.12,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-05-01T14:30:00.000Z,
      "BuyEventId": "111115",
      "BuyPrice": 200,
      "Notes": "bought after split (fractional)",
      "Quantity": 0.5060000000000001,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-05-01T14:30:00.000Z,
      "BuyEventId": "111115",
      "BuyPrice": 200,
      "Notes": "bought after split (fractional) (remaining fraction)",
      "Quantity": 0.16059999999999985,
      "Ticker": "AAPL",
    },
  ],
}
`;

exports[`parseStockEventsFractional should handle fractional shares 3 1`] = `
{
  "AAPL": [
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111111",
      "BuyPrice": 150,
      "Notes": "before split (fractional)",
      "Quantity": 0.4,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 150,
      "Notes": "before split",
      "Quantity": 1,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 150,
      "Notes": "before split",
      "Quantity": 1,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 150,
      "Notes": "before split",
      "Quantity": 0.94,
      "SellDate": 2023-06-01T14:30:00.000Z,
      "SellEventId": "111116",
      "SellPrice": 175,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 150,
      "Notes": "before split",
      "Quantity": 1,
      "Ticker": "AAPL",
    },
    {
      "BuyDate": 2023-01-01T10:00:00.000Z,
      "BuyEventId": "111112",
      "BuyPrice": 150,
      "Notes": "before split (remaining fraction)",
      "Quantity": 0.06000000000000005,
      "Ticker": "AAPL",
    },
  ],
}
`;
